# computer_vision

./: .gitignore  caffe.md
CVcpp/blur/: CMakeCache.txt  CMakeLists.txt  blur.cpp
CVcpp/hough/: CMakeCache.txt  CMakeLists.txt  hough.cpp  hough.hpp
CVcpp/sliding_window/: CMakeLists.txt  sliding_window.cpp
CVcpp/sliding_window/xcode/: CMakeCache.txt
CVcpp/sliding_window/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
CVcpp/sliding_window/xcode/SlidingWindow.build/Debug/ALL_BUILD.build/: Script-FB995FECD83745878A67FF32.sh
CVcpp/sliding_window/xcode/SlidingWindow.build/Debug/SlidingWindow.build/Objects-normal/x86_64/: SlidingWindow.LinkFileList  sliding_window.d
CVcpp/sliding_window/xcode/SlidingWindow.build/Debug/ZERO_CHECK.build/: Script-81ABC7A788BE4C01BA0EC1C6.sh
CVcpp/sliding_window/xcode/SlidingWindow.xcodeproj/: project.pbxproj
CVcpp/sliding_window/xcode/SlidingWindow.xcodeproj/project.xcworkspace/xcshareddata/: SlidingWindow.xccheckout
CVcpp/sliding_window/xcode/SlidingWindow.xcodeproj/project.xcworkspace/xcuserdata/aambasth.xcuserdatad/: UserInterfaceState.xcuserstate
CVcpp/sliding_window/xcode/SlidingWindow.xcodeproj/xcuserdata/aambasth.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  SlidingWindow.xcscheme  ZERO_CHECK.xcscheme  xcschememanagement.plist
LFOV/: generate_training_images.py
protoBuf/: detections.proto
sliding_window/: basic_classification.py  utils.py
thesis/: important links.txt
visualLog/: .visual.py.swo  demo.html  visual.py
(+87 files in other folders)
